@@ -642,6 +642,85 @@ DECLARE_INTERFACE_(ITypeInfo2,ITypeInfo)
 };
 #undef INTERFACE
 
+#define INTERFACE ICreateTypeInfo
+DECLARE_INTERFACE_(ICreateTypeInfo, IUnknown)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(SetGuid)(THIS_ REFGUID) PURE;
+	STDMETHOD(SetTypeFlags)(THIS_ UINT) PURE;
+	STDMETHOD(SetDocString)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpContext)(THIS_ DWORD) PURE;
+	STDMETHOD(SetVersion)(THIS_ WORD,WORD) PURE;
+	STDMETHOD(AddRefTypeInfo)(THIS_ ITypeInfo *,HREFTYPE *) PURE;
+	STDMETHOD(AddFuncDesc)(THIS_ UINT,FUNCDESC *) PURE;
+	STDMETHOD(AddImplType)(THIS_ UINT,HREFTYPE) PURE;
+	STDMETHOD(SetImplTypeFlags)(THIS_ UINT,INT) PURE;
+	STDMETHOD(SetAlignment)(THIS_ WORD) PURE;
+	STDMETHOD(SetSchema)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(AddVarDesc)(THIS_ UINT,VARDESC *) PURE;
+	STDMETHOD(SetFuncAndParamNames)(THIS_ UINT,LPOLESTR *,UINT) PURE;
+	STDMETHOD(SetVarName)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetTypeDescAlias)(THIS_ TYPEDESC *) PURE;
+	STDMETHOD(DefineFuncAsDllEntry)(THIS_ UINT,LPOLESTR,LPOLESTR) PURE;
+	STDMETHOD(SetFuncDocString)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetVarDocString)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetFuncHelpContext)(THIS_ UINT,DWORD) PURE;
+	STDMETHOD(SetVarHelpContext)(THIS_ UINT,DWORD) PURE;
+	STDMETHOD(SetMops)(THIS_ UINT,BSTR) PURE;
+	STDMETHOD(SetTypeIdldesc)(THIS_ IDLDESC *) PURE;
+	STDMETHOD(LayOut)(THIS) PURE;
+};
+#undef INTERFACE
+
+#define INTERFACE ICreateTypeInfo2
+DECLARE_INTERFACE_(ICreateTypeInfo2, ICreateTypeInfo)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(SetGuid)(THIS_ REFGUID) PURE;
+	STDMETHOD(SetTypeFlags)(THIS_ UINT) PURE;
+	STDMETHOD(SetDocString)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpContext)(THIS_ DWORD) PURE;
+	STDMETHOD(SetVersion)(THIS_ WORD,WORD) PURE;
+	STDMETHOD(AddRefTypeInfo)(THIS_ ITypeInfo *,HREFTYPE *) PURE;
+	STDMETHOD(AddFuncDesc)(THIS_ UINT,FUNCDESC *) PURE;
+	STDMETHOD(AddImplType)(THIS_ UINT,HREFTYPE) PURE;
+	STDMETHOD(SetImplTypeFlags)(THIS_ UINT,INT) PURE;
+	STDMETHOD(SetAlignment)(THIS_ WORD) PURE;
+	STDMETHOD(SetSchema)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(AddVarDesc)(THIS_ UINT,VARDESC *) PURE;
+	STDMETHOD(SetFuncAndParamNames)(THIS_ UINT,LPOLESTR *,UINT) PURE;
+	STDMETHOD(SetVarName)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetTypeDescAlias)(THIS_ TYPEDESC *) PURE;
+	STDMETHOD(DefineFuncAsDllEntry)(THIS_ UINT,LPOLESTR,LPOLESTR) PURE;
+	STDMETHOD(SetFuncDocString)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetVarDocString)(THIS_ UINT,LPOLESTR) PURE;
+	STDMETHOD(SetFuncHelpContext)(THIS_ UINT,DWORD) PURE;
+	STDMETHOD(SetVarHelpContext)(THIS_ UINT,DWORD) PURE;
+	STDMETHOD(SetMops)(THIS_ UINT,BSTR) PURE;
+	STDMETHOD(SetTypeIdldesc)(THIS_ IDLDESC *) PURE;
+	STDMETHOD(LayOut)(THIS) PURE;
+	STDMETHOD(DeleteFuncDesc)(THIS_ UINT) PURE;
+	STDMETHOD(DeleteFuncDescByMemId)(THIS_ MEMBERID,INVOKEKIND) PURE;
+	STDMETHOD(DeleteVarDesc)(THIS_ UINT) PURE;
+	STDMETHOD(DeleteVarDescByMemId)(THIS_ MEMBERID) PURE;
+	STDMETHOD(DeleteImplType)(THIS_ UINT) PURE;
+	STDMETHOD(SetCustData)(THIS_ REFGUID,VARIANT *) PURE;
+	STDMETHOD(SetFuncCustData)(THIS_ UINT,REFGUID,VARIANT *) PURE;
+	STDMETHOD(SetParamCustData)(THIS_ UINT,UINT,REFGUID,VARIANT *) PURE;
+	STDMETHOD(SetVarCustData)(THIS_ UINT,REFGUID,VARIANT *) PURE;
+	STDMETHOD(SetImplTypeCustData)(THIS_ UINT,REFGUID,VARIANT *) PURE;
+	STDMETHOD(SetHelpStringContext)(THIS_ ULONG) PURE;
+	STDMETHOD(SetFuncHelpStringContext)(THIS_ UINT,ULONG) PURE;
+	STDMETHOD(SetVarHelpStringContext)(THIS_ UINT,ULONG) PURE;
+	STDMETHOD(Invalidate)(THIS) PURE;
+	STDMETHOD(SetName)(THIS_ LPOLESTR) PURE;
+};
+#undef INTERFACE
+
 #define INTERFACE ITypeLib
 DECLARE_INTERFACE_(ITypeLib,IUnknown)
 {
@@ -681,6 +760,48 @@ DECLARE_INTERFACE_(ITypeLib2,ITypeLib)
 	STDMETHOD(GetLibStatistics)(THIS_ ULONG*,ULONG*) PURE;
 	STDMETHOD(GetDocumentation2)(THIS_ INT,LCID,BSTR*,DWORD*,BSTR*) PURE;
 	STDMETHOD(GetAllCustData)(THIS_ CUSTDATA*) PURE;
+};
+#undef INTERFACE
+
+#define INTERFACE ICreateTypeLib
+DECLARE_INTERFACE_(ICreateTypeLib, IUnknown)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(CreateTypeInfo)(THIS_ LPOLESTR,TYPEKIND,ICreateTypeInfo **) PURE;
+	STDMETHOD(SetName)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetVersion)(THIS_ WORD,WORD) PURE;
+	STDMETHOD(SetGuid)(THIS_ REFGUID) PURE;
+	STDMETHOD(SetDocString)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpFileName)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpContext)(THIS_ DWORD) PURE;
+	STDMETHOD(SetLcid)(THIS_ LCID) PURE;
+	STDMETHOD(SetLibFlags)(THIS_ UINT) PURE;
+	STDMETHOD(SaveAllChanges)(THIS) PURE;
+};
+#undef INTERFACE
+
+#define INTERFACE ICreateTypeLib2
+DECLARE_INTERFACE_(ICreateTypeLib2, ICreateTypeLib)
+{
+	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
+	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
+	STDMETHOD_(ULONG,Release)(THIS) PURE;
+	STDMETHOD(CreateTypeInfo)(THIS_ LPOLESTR,TYPEKIND,ICreateTypeInfo **) PURE;
+	STDMETHOD(SetName)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetVersion)(THIS_ WORD,WORD) PURE;
+	STDMETHOD(SetGuid)(THIS_ REFGUID) PURE;
+	STDMETHOD(SetDocString)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpFileName)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetHelpContext)(THIS_ DWORD) PURE;
+	STDMETHOD(SetLcid)(THIS_ LCID) PURE;
+	STDMETHOD(SetLibFlags)(THIS_ UINT) PURE;
+	STDMETHOD(SaveAllChanges)(THIS) PURE;
+	STDMETHOD(DeleteTypeInfo)(THIS_ LPOLESTR) PURE;
+	STDMETHOD(SetCustData)(THIS_ REFGUID,VARIANT) PURE;
+	STDMETHOD(SetHelpStringContext)(THIS_ ULONG) PURE;
+	STDMETHOD(SetHelpStringDll)(THIS_ LPOLESTR) PURE;
 };
 #undef INTERFACE
 
